2014-10-09  David B. Lamkins  <david@lamkins.net>

	* help.c (show_about): Tweak About dialog: Pull title from
	aplwrap.h; fix Chris' email link; add build version information.

	* aplwrap.c (main): Pull default title from aplwrap.h.

	* menu.c (open_object_cb): Disable typeahead search in Open Object
	dialog. Document search keys.

	* menu.c (names_search, open_object_cb): Implement substring
	search in Open Object dialog.

2014-10-08  David B. Lamkins  <david@lamkins.net>

	* help.h (): Factor out help menu.

	* help.c (): Factor out help menu.

	* menu.c (build_menubar): Factor out help menu.

	* edit.c (build_edit_menubar): Add Ctrl-W accelerator key to
	close edit window. Add help menu to edit window.

	* menu.c (open_object_cb): Handle deactivated selection in Open
	Object dialog.

	* menu.c (open_object_cb): Previous patch was wrong. This one
	captures current selection in Open Object dialog.

	* menu.c (open_object_cb): Preselect first item in Open Object
	dialog so OK button will work.

	* edit.c (trim_length): Fix console warnings emitted if a function
	opened for editing contains empty lines.

2014-10-07  David B. Lamkins  <david@lamkins.net>

	* edit.h (): Don't lose unsaved edit windows when closing transcript.

	* aplwrap.h (): Don't lose unsaved edit windows when closing
	transcript.

	* edit.c (check_modified, message_dialog): Don't lose unsaved edit
	windows when closing transcript.

	* aplwrap.c (main): Don't lose unsaved edit windows when closing
	transcript.

	* apl.c (aplwrap_quit): Don't lose unsaved edit windows when
	closing transcript.

	* complete.c (is_extra_break_char, lookup_callback, complete):
	Allow additional break characters interior to completion
	identifiers.

	* edit.h (): Fix crash that may occur while closing an edit window.

	* edit.c (edit_close, set_status_line): Fix crash that may occur
	while closing an edit window.

	* edit.c (message_dialog): Fix compiler warning.

2014-10-06  David B. Lamkins  <david@lamkins.net>
